Event card text alignment fix

--- a/src/components/EventsContent/EventCard.css
+++ b/src/components/EventsContent/EventCard.css
@@ -56,14 +56,11 @@
     text-overflow: ellipsis; */
 
 }
-.event-card-container .event-text.full .event-description{
-    /* -webkit-line-clamp: unset; */
-
-}
 .event-card-container .event-more-info{
     max-height: 0;
     overflow: hidden;
     transition: max-height 0.6s ease;
+    text-align: left;
 }
 .event-card-container .event-text.full .event-more-info{
     max-height: 130px;
